# atomik_working_version

./: .cursorrules  AI_MAGIC_WAND.md  SECURITY.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: admin.py  ai.py  billing.py  clients.py  findings.py  imports.py  orgs.py  projects.py  reports.py  templates.py  uploads.py  webhooks.py
backend/app/core/: backup.py  config.py  encryption.py  file_validation.py  rate_limit.py  validators.py
backend/app/services/: __init__.py  ai_service.py  nessus_parser.py  pdf_service.py  qualys_parser.py  rich_text_service.py
backend/app/templates/pdf/: report.html  report_apple.html  report_classic.html
backend/prisma/: schema.prisma
backend/prisma/migrations/20251128010000_init/: migration.sql
backend/prisma/migrations/20251128173234_add_project_members/: migration.sql
backend/tests/: __init__.py  conftest.py  test_audit_service.py  test_file_validation.py  test_rate_limit.py  test_sanitization.py  test_security_headers.py
docker/: .env.example  docker-compose.yml  nginx.conf
frontend/: Dockerfile  index.html  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddClientDialog.tsx  AddFindingDialog.tsx  AddProjectDialog.tsx  ClientCard.tsx  ClientDetailModal.tsx  ClientListItem.tsx  EditFindingModal.tsx  EditFindingSheet.tsx  ExportReportModal.tsx  FindingDetails.tsx  FindingsTabContent.tsx  Layout.tsx  OrgSync.tsx  ProjectDetailModal.tsx  ScreenshotUploader.tsx  StatCard.tsx  UserSync.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/pages/: Clients.tsx  Dashboard.tsx  Findings.tsx  (+6 more)
(+16 files in other folders)
