[tool.poetry]
name = "pentest-report-backend"
version = "1.0.0"
description = "FastAPI backend for penetration testing report generation platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
prisma = "^0.11.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
weasyprint = "^60.2"
pillow = "^10.2.0"
cryptography = "^42.0.0"
redis = "^5.0.1"
celery = "^5.3.6"
boto3 = "^1.34.0"
lxml = "^5.1.0"
python-magic = "^0.4.27"
openai = "^1.12.0"
markdown = "^3.5.0"
bleach = "^6.1.0"
jinja2 = "^3.1.0"
playwright = "^1.41.0"
python-docx = "^1.1.0"
docxtpl = "^0.16.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
